terraform/security.tf
resource "aws_security_group" "ecs_sg" {
  name        = "franquicias-ecs-sg"
  description = "Permitir trafico a la API"
  vpc_id      = aws_vpc.main.id

  # Regla de entrada para el puerto 8080
  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Regla de entrada para el puerto 80
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Regla de salida hacia internet
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
